F&GDEV/src/objects/Account_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Opportunities</relationshipLabel>
        <relationshipName>Account_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Opportunity_Detail__c</fullName>
        <label>Opportunity Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Result__c</fullName>
        <label>Opportunity Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Value_Achieved__c</fullName>
        <label>Opportunity Value Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Account Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACC-OPT-{000000}</displayFormat>
        <label>Account Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>